# carta_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/carta/share/carta/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/carta/share/carta/worlds/: my_empty.world
src/carta/: CMakeLists.txt  package.xml
src/carta/config/: bridge_parameters.yaml  control_wheels.yaml  diff_drive_controller.yaml  joint.yaml  my_controllers.yaml
src/carta/launch/: carta_launch_sim.launch.py  carta_rsp.launch.py  gazebo.launch.py  new.launch.py  spawn.launch.py  xac_classic.launch.py
src/carta/meshes/: base_link.STL  cam_1.STL  cam_2.STL  cam_3.STL  left_caster.STL  lidar.STL  lidar_2.STL  right_caster.STL
src/carta/model/: all.urdf.xacro  cam1.xacro  cam2.xacro  cam3.xacro  carta.urdf.xacro  carta.xacro  gazebo.xacro  lid1.xacro  lid2.xacro
src/carta/rviz/: new.rviz
src/carta/scripts/: control_keys.py  wheel_key_control.py
src/carta/worlds/: canyonview_field.world  empty.sdf  ign.sdf  lo.sdf  lol.world  new.world  new_world.world  sisd.world
src/carta/worlds/asphalt_plane/: model.sdf
src/carta/worlds/pop/: model.config  model.sdf
src/carta/worlds/sidewalk/: model.config  model.sdf
src/carta/worlds/unit_cylinder/: model.sdf
