<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carta</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="musa@todo.todo">musa</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>gazebo_ros</build_depend>
  <build_depend>ros_gz_sim</build_depend>
  <build_depend>ros_gz_bridge</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>gazebo_ros2_control</build_depend>
  <build_depend>joint_state_broadcaster</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <depend>sensor_msgs</depend>
  <!-- Exec dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
